crates/aiy-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/aiy-swarm-config/tests/snapshot_tests.rs
expression: genesis.aiy_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 98
system_state_version: 1
validators:
  total_stake: 20000000000000000
  active_validators:
    - metadata:
        aiy_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0x4fd94f78b1fc3abb8e6e345e9a3fb625c89f3b28091c9f93979f4754a5f15a5f"
          size: 0
      voting_power: 10000
      operation_cap_id: "0x61e985503407255aebc1c6285cf3df65586dee29dc46d121b794fc99936b96ea"
      gas_price: 1000
      staking_pool:
        id: "0x6e5d89c3a4cee81e9d1b69e17a7828627ae2f3ff0b68df9fbef437f5c4ca1a73"
        activation_epoch: 0
        deactivation_epoch: ~
        aiy_balance: 20000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 20000000000000000
        exchange_rates:
          id: "0xebfee509d3b1cd86fdbd0208874ce6ffdb89079bca2ae20efef8e5353f19036c"
          size: 1
        pending_stake: 0
        pending_total_aiy_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0x751b924f4563d9babcb0a9f8c4d5a9a865b4bf0dd96213b7bc6d9d1c8c45f607"
          size: 0
      commission_rate: 200
      next_epoch_stake: 20000000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0x939d8b7419cee095d7d0d3dc3b7d106c55c76c715373d8bf58c5eab761e4cee7"
        size: 0
  pending_active_validators:
    contents:
      id: "0x792230e0ec7e21e6a5de0f2236e61f290b902b59f98807b32c4b20d3abb8e0a4"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0x8daad66978d4514b3f67890e5a2cad1946700779364ce6dd9c9e91ce0ee3813b"
    size: 1
  inactive_validators:
    id: "0x289fdf0866b60eb8ee308204f72f8d6e4182245bd60263b574c5b9a6bc3d2e01"
    size: 0
  validator_candidates:
    id: "0xc4c80fb4d94c55d0946e5f84b01bf416831d073871417e1d435019772c63c923"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0xf4d546787a297a4f234cc20827f27e20f3b2f93995f28f12e01b6db034fd6a25"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 30000000000000000
  validator_low_stake_threshold: 20000000000000000
  validator_very_low_stake_threshold: 15000000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0xf43415aeea35d2f1f5bcdee1d7982173f215f274ac92118e65fb44c4bc053ea1"
    size: 0
reference_gas_price: 1000
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 9230000000000000000
  distribution_counter: 0
  current_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 10
  stake_subsidy_decrease_rate: 1000
  extra_fields:
    id:
      id: "0xebf24a08cf3f6a4255725b5ee61073e69a57112a55696b33d59e19958e7282a8"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0xd2b58491e1d86857d3b634ea5dac9190b0caeb9186765d71fedd806501f67658"
  size: 0
